updated photos and form

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bright Future Trust - Empowering Dreams Through Education</title>
-    <meta name="description" content="Educational trust providing support and job assistance to deserving students from underprivileged backgrounds" />
-    <meta name="author" content="Bright Future Trust" />
+    <title>Mukkulathor Free Educational & Employment Trust</title>
+    <meta name="description" content="Mukkulathor Free Educational & Employment Trust" />
+    <meta name="author" content="Mukkulathor Free Educational & Employment Trust" />
 
-    <meta property="og:title" content="Bright Future Trust - Empowering Dreams Through Education" />
-    <meta property="og:description" content="Educational trust providing support and job assistance to deserving students from underprivileged backgrounds" />
+    <meta property="og:title" content="Mukkulathor Free Educational & Employment Trust" />
+    <meta property="og:description" content="Mukkulathor Free Educational & Employment Trust" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=1200&h=630&fit=crop" />
 
